--- a/Resources/Prototypes/Maps/gemini.yml
+++ b/Resources/Prototypes/Maps/gemini.yml
@@ -47,16 +47,14 @@
             ResearchAssistant: [ 8, 8 ]
             Borg: [ 2, 2 ]
             #security
-            #BlueShield: [1, 1]
             HeadOfSecurity: [ 1, 1 ]
             Warden: [ 1, 1 ]
             Detective: [ 1, 1 ]
             SecurityOfficer: [ 5, 7 ]
             SecurityCadet: [ 8, 8 ]
-            #Brigmedic: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            #Miner: [ 3,3 ]
             SalvageSpecialist: [ 3, 4 ]
             CargoTechnician: [ 3, 3 ]
             #civillian
@@ -64,3 +62,6 @@
             Clown: [ 1, 2 ]
             Mime: [ 1, 2 ]
             Musician: [ 1, 2 ]
+            #centcom      
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]
