--- a/Resources/Prototypes/Maps/aspid.yml
+++ b/Resources/Prototypes/Maps/aspid.yml
@@ -52,10 +52,9 @@
             Detective: [ 1, 1 ]
             SecurityOfficer: [ 4, 5 ]
             SecurityCadet: [ 4, 4 ]
-            #Brigmedic: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            #Miner: [ 3,3 ]
             SalvageSpecialist: [ 3, 4 ]
             CargoTechnician: [ 2, 3 ]
             #civillian
@@ -64,5 +63,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             #centcom      
-            #BlueShield: [ 1, 1 ]
-            #CentComConsultant: [ 1, 1 ]
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]
