--- a/Resources/Prototypes/Maps/atlas.yml
+++ b/Resources/Prototypes/Maps/atlas.yml
@@ -43,7 +43,6 @@
             ResearchAssistant: [ 1, 3 ]
             Borg: [ 2, 2 ]
             #security
-            #BlueShield: [1, 1]
             HeadOfSecurity: [ 1, 1 ]
             Warden: [ 1, 1 ]
             SecurityOfficer: [ 3, 3 ]
@@ -51,7 +50,6 @@
             Detective: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            #Miner: [ 2,2 ]
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 2, 2 ]
             #civillian
@@ -59,3 +57,6 @@
             Clown: [ 1, 1 ]
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
+            #centcom      
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]
