--- a/Resources/Prototypes/Maps/box.yml
+++ b/Resources/Prototypes/Maps/box.yml
@@ -52,11 +52,10 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 4, 4 ]
             Lawyer: [ 2, 2 ]
-            #Brigmedic: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 3, 3 ]
-            #Miner: [ 3,3 ]
             CargoTechnician: [ 3, 3 ]
             #civilian
             Passenger: [ -1, -1 ]
@@ -64,5 +63,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             #centcom      
-            #BlueShield: [ 1, 1 ]
-            #CentComConsultant: [ 1, 1 ]
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]
