--- a/Resources/Prototypes/Maps/cluster.yml
+++ b/Resources/Prototypes/Maps/cluster.yml
@@ -51,10 +51,9 @@
             Detective: [ 1, 1 ]
             SecurityOfficer: [ 3, 3 ]
             SecurityCadet: [ 2, 2 ]
-            #Brigmedic: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            #Miner: [ 2,2 ]
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 1, 1 ]
             #civillian
@@ -63,5 +62,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             #centcom      
-            #BlueShield: [ 1, 1 ]
-            #CentComConsultant: [ 1, 1 ]            
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]            
