--- a/Resources/Prototypes/Maps/origin.yml
+++ b/Resources/Prototypes/Maps/origin.yml
@@ -52,10 +52,9 @@
             Detective: [ 1, 1 ]
             SecurityOfficer: [ 7, 7 ]
             SecurityCadet: [ 2, 4 ]
-            #Brigmedic: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            #Miner: [ 3,3 ]
             SalvageSpecialist: [ 3, 3 ]
             CargoTechnician: [ 5, 5 ]
             #civillian
@@ -66,5 +65,5 @@
             Boxer: [ 1, 1 ]
             Reporter: [ 1, 1 ]
             #centcom      
-            #BlueShield: [ 1, 1 ]
-            #CentComConsultant: [ 1, 1 ]            
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]            
