--- a/Resources/Prototypes/Maps/saltern.yml
+++ b/Resources/Prototypes/Maps/saltern.yml
@@ -48,10 +48,9 @@
             Warden: [ 1, 1 ]
             SecurityOfficer: [ 4, 4 ]
             SecurityCadet: [ 4, 4 ]
-            #Brigmedic: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            #Miner: [ 3,3 ]
             SalvageSpecialist: [ 1, 3 ]
             CargoTechnician: [ 2, 2 ]
             #civillian
@@ -60,5 +59,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             #centcom      
-            #BlueShield: [ 1, 1 ]
-            #CentComConsultant: [ 1, 1 ]            
+            BlueShield: [ 1, 1 ]
+            CentComConsultant: [ 1, 1 ]            
